# langchain-lectures

./: .gitignore  main.py  pyproject.toml
langchain_intro/: 1.llm_chain.ipynb  guided_learning_1_llm_chain.md
section3/: 2_agent_loop_raw_function_calling.py  3_raw_react_prompt.py  intro.md  layer1 ReAct Loop.md  layer2 Manual JSON Schemas vs Langchian Tool.md  layer3 ReAct Prompt.md  main.py  section3_master_guide.md  ‎1_agent_loop_langchain_tool_calling.py
section4/: 1.lecture_note.md  2.lecture_note.md  3.lecture_note.md  guided_learning.md
section5/: 1.lecture_note.md  2.lecture_note.md  3.lecture_note.md  3.note.md  guided_learning.md  main.py
section6-RAG/: 6-1.rag_intro.md  6-2.basic_structure.md  6-3.loader_splitter.md  6-4.ingestion.md  6-5.retrieve.md  ingestion.py  new_note.md  no_lcel.py  pyproject.toml  section6-adv.md
section7-RAG/: ingestion.md  ingestion.py  lag_arch.md  logger.py  main.py  pyproject.toml  retrieval.md
section7-RAG/backend/: core.py
